--- a/Flappy-Bird.csproj
+++ b/Flappy-Bird.csproj
@@ -51,6 +51,9 @@
   <ItemGroup>
     <Compile Include="api\RestClient.cs" />
     <Compile Include="api\TopTen.cs" />
+    <Compile Include="GamePanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="screen.cs">
